--- a/BeeManager/BeeManagerMVC/Views/Home/Index.cshtml
+++ b/BeeManager/BeeManagerMVC/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@{
+﻿@model IEnumerable<BeeManagerLibrary.Models.Production>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @foreach (var item in Model)
+    {
+        <div>@item.Id</div>
+        <div>@item.Date</div>
+    }
 </div>
