--- a/BeeManager/BeeManagerMVC/Views/Home/Index.cshtml
+++ b/BeeManager/BeeManagerMVC/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<BeeManagerMVC.Models.ProductionSummaryModel>
+﻿@model BeeManagerMVC.Models.ProductionSummaryViewModel
+
 
 @{
     ViewData["Title"] = "Home Page";
@@ -6,6 +7,20 @@
 
 <div class="text-center">
     <h1 class="display-4">Production summary</h1>
+    <form asp-controller="Home" asp-action="Index" method="get">
+        <p>
+            Year: <select asp-for="Year" asp-items="Model.Years">
+                        <option value="">All</option>
+                  </select>
+
+            Product Name: <select asp-for="ProductName" asp-items="Model.Products">
+                            <option value="">All</option>
+                        </select>
+
+            <input type="submit" value="Filter" />
+
+        </p>
+    </form>
     <table class="table table-bordered table-hover">
         <tr>
             <th>Year </th>
@@ -13,7 +28,7 @@
             <th>Quantity</th>
             <th>Unit</th>
         </tr>
-        @foreach (var d in Model)
+        @foreach (var d in Model.ProductionSummary)
         {
             <tr>
                 <td>@d.Year</td>
