Added Create page

--- a/BeeManager/BeeManagerMVC/Views/Production/Index.cshtml
+++ b/BeeManager/BeeManagerMVC/Views/Production/Index.cshtml
@@ -4,8 +4,11 @@
     ViewData["Title"] = "Production";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Production</h1>
+<div>
+    <h1 class="display-4 text-center">Production</h1>
+        <p>
+            @Html.ActionLink("Create New", "Create")
+        </p>
         <table class="table table-bordered table-hover">
             <tr>
                 <th>Id </th>
