--- a/BeeManager/BeeManagerMVC/Views/Production/Edit.cshtml
+++ b/BeeManager/BeeManagerMVC/Views/Production/Edit.cshtml
@@ -50,7 +50,8 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-success" />
+            @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { onclick = "return confirm('Are you sure you wish to delete this article?');", @class = "btn btn-danger" })
         </div>
     </div>
 </div>
