--- a/BeeManager/BeeManagerMVC/Views/Production/Index.cshtml
+++ b/BeeManager/BeeManagerMVC/Views/Production/Index.cshtml
@@ -6,9 +6,7 @@
 
 <div>
     <h1 class="display-4 text-center">Production</h1>
-        <p>
-            @Html.ActionLink("Create New", "Create")
-        </p>
+    <p>@Html.ActionLink("Create", "Create", new {  }, new { @class = "btn btn-primary" })</p>
         <table class="table table-bordered table-hover">
             <tr>
                 <th>Id </th>
@@ -26,9 +24,8 @@
             <td>@d.Quantity</td>
             <td>@d.Units</td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = d.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = d.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = d.Id })
+                @Html.ActionLink("Edit", "Edit", new { id = d.Id }, new { @class = "btn btn-secondary" })
+                @Html.ActionLink("Delete", "Delete", new { id = d.Id }, new { onclick = "return confirm('Are you sure you wish to delete this article?');", @class = "btn btn-danger" })
             </td>
         </tr>
             }
