--- a/BeeManager/BeeManagerMVC/Views/Production/Index.cshtml
+++ b/BeeManager/BeeManagerMVC/Views/Production/Index.cshtml
@@ -31,13 +31,13 @@
         {
             <tr>
                 <td>@d.Id</td>
-                <td>@d.Date</td>
+                <td>@d.Date.ToShortDateString()</td>
                 <td>@d.Product</td>
                 <td>@d.Quantity</td>
                 <td>@d.Units</td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = d.Id }, new { @class = "btn btn-secondary" })
-                    @Html.ActionLink("Delete", "Delete", new { id = d.Id }, new { onclick = "return confirm('Are you sure you wish to delete this article?');", @class = "btn btn-danger" })
+                    @Html.ActionLink("Delete", "Delete", new { id = d.Id }, new { onclick = "return confirm('Are you sure you wish to delete this production?');", @class = "btn btn-danger" })
                 </td>
             </tr>
         }
