--- a/BeeManager/BeeManagerMVC/Views/Production/Create.cshtml
+++ b/BeeManager/BeeManagerMVC/Views/Production/Create.cshtml
@@ -19,7 +19,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Date,new { htmlAttributes = new { placeholder = "dd.mm.yyyy", @class = "form-control" } })
+            @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control datepicker", @type= "text" } })
             @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -59,3 +59,17 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts
+{
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+        $(function () {
+            $(".datepicker").attr("placeholder", "DD.MM.YYYY").datepicker({dateFormat: "dd.mm.yy",
+      changemonth: true,
+      changeyear: true});
+        });
+    </script>
+}
