--- a/BeeManager/BeeManagerMVC/Views/Production/Index.cshtml
+++ b/BeeManager/BeeManagerMVC/Views/Production/Index.cshtml
@@ -31,7 +31,7 @@
         {
             <tr>
                 <td>@d.Id</td>
-                <td>@d.Date.ToShortDateString()</td>
+                <td>@d.Date.Value.ToShortDateString()</td>
                 <td>@d.Product</td>
                 <td>@d.Quantity</td>
                 <td>@d.Units</td>
