ChartDemo section created

--- a/BeeManager/BeeManagerMVC/Views/Shared/_Layout.cshtml
+++ b/BeeManager/BeeManagerMVC/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Production" asp-action="Index">Production</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ChartDemo" asp-action="Index">ChartDemo</a>
+                        </li>
                     </ul>
                 </div>
             </div>
